--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,7 +7,8 @@
 	<link rel="shortcut icon" href="../static/images/favicon/android-chrome-512x512.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-	<link rel="stylesheet" href="styles/style.css" />
+	<link rel="stylesheet" href="../static/styles/style.css" />
+
 </head>
 <script src="https://js.paystack.co/v2/inline.js"></script>
 
@@ -74,7 +75,10 @@
 <label>
     <input name="amount" type="hidden" value="{{ ticket_price }}" >
 </label>
-
-<!--<script src=../static/scripts/index.js"></script>-->
+<script src="../static/scripts/index.js"></script>
+<script>
+    const encoded = "{{ ticket_price | b64encode }}";  // write a custom Jinja filter
+    const ticket_price = atob(encoded);
+</script>
 </body>
 </html>
